[pool] add filter for domain to list operation
